--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>To-Do App</h1>
   <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Enter To-Do:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="new-task-description" name="new-task-description" placeholder="Add Something">
       <input type="submit" value="Add New To-Do">
   </form>
       <div id="list">
-        <h2>My Todos</h2> 
+        <h2>My Todo List</h2> 
         <ul id="tasks"></ul>
       </div>
   </div>
